# ParallaxDB

./: CMakeLists.txt  NULL_SUPPORT_ISSUE.md  QUICKSTART.md  README.md  ROADMAP.md
include/executor/: QueryExecutor.hpp
include/parser/: DDLParser.hpp  DMLParser.hpp  Expression.hpp  ExpressionEvaluator.hpp  ExpressionParser.hpp  Parser.hpp  SQLParser.hpp  SQLProcessor.hpp  Token.hpp  Tokenizer.hpp
include/planner/: FilterNode.hpp  QueryPlan.hpp
include/storage/: Database.hpp  Table.hpp
include/types/: Common.hpp
src/: main.cpp
src/executor/: QueryExecutor.cpp
src/parser/: DDLParser.cpp  DMLParser.cpp  ExpressionEvaluator.cpp  ExpressionParser.cpp  SQLProcessor.cpp
src/planner/: FilterNode.cpp  QueryPlan.cpp
src/storage/: Database.cpp
src/types/: DataValidator.cpp
tests/: test_basic.cpp  test_parser.cpp
